Ties up Aggregation operation to the rest of the system